Travel::Routing::DE::HAFAS 0.08 - Tue Jun 11 2024

    * Adjust walking connection segment handling for DB HAFAS update on
      Sun Jun 09 (ignore walking segments without a duration)

Travel::Routing::DE::HAFAS 0.07 - Sat Apr 13 2024

    * Replace built-in HAFAS service list with the one provided by
      Travel::Status::DE::HAFAS
    * Convert non-local time stamps to backend-specific time zone
    * hafas: Add -x / --exclude-infeasible and -j / --with-jid options
    * HAFAS::Connection::Section: Support unspecified local transit (TRSF)

Travel::Routing::DE::HAFAS 0.06 - Thu Mar 28 2024

    * hafas: Add -C / --change-time option
    * HAFAS: Add min_change_time option

Travel::Routing::DE::HAFAS 0.05 - Sun Mar 24 2024

    * hafas: Add -c / --max-change option
    * hafas: Add optional via arguments
    * HAFAS: Add max_change option
    * HAFAS: Add via_stops option

Travel::Routing::DE::HAFAS 0.04 - Mon Feb 26 2024

    * hafas: Add --raw-json option
    * Handle undefined occupancy and partial cancellations
    * Update ÖBB modes of transport (mot list)

Travel::Routing::DE::HAFAS 0.03 - Sun Dec 10 2023

    * hafas: Add --depart and -a / --arrive options
    * HAFAS->new: Add arrival option

Travel::Routing::DE::HAFAS 0.02 - Sat Nov 25 2023

    * hafas: Add -f / --full-route option
    * hafas: Fix -vv / -vvv support
    * Use Travel::Status::DE::HAFAS::Location for location data
    * Remove Travel::Routing::DE::HAFAS::Location
    * Use Travel::Status::DE::HAFAS::Journey for journey data
    * Section: add load accessor
    * Section: add journey accessor
    * Section: remove operator, id, name ,category ,category_long, class,
      number ,line ,line_no, delay, direction accessors. Use journey->operator,
      journey->id, etc. instead.

Travel::Routing::DE::HAFAS 0.01 - Thu Nov 16 2023

    * Initial release
    * Supports itinerary queries using Deutschen Bahn's mgate.exe interface
    * No stable API yet