@@ -3,7 +3,7 @@ use strict;
 use warnings;
 use 5.014;
 
-our $VERSION = '0.08';
+our $VERSION = '0.09';
 
 use utf8;
 use DateTime;
@@ -291,7 +291,7 @@ sub show_message {
 }
 
 if ( my $err = $hafas->errstr ) {
-	say STDERR "Request error: ${err}";
+	say STDERR "Backend error: ${err}";
 	if ( $hafas->errcode ) {
 		if ( $hafas->errcode eq 'H730' or $hafas->errcode eq 'LOCATION' ) {
 			show_similar_stops();
@@ -498,7 +498,7 @@ B<hafas> [B<-d> I<date>] [B<-t> I<time>] [B<-m> I<motlist>]
 
 =head1 VERSION
 
-version 0.08
+version 0.09
 
 =head1 DESCRIPTION
 
